cmake_minimum_required(VERSION 3.21)

project(advent_of_code)

include_directories(${PROJECT_SOURCE_DIR})
add_executable(main
  src/main.cpp
  src/utils.cpp
  src/day01.cpp
  src/day02.cpp
  src/day03.cpp
  src/day04.cpp
  src/day05.cpp
  src/day06.cpp
  src/day07.cpp
  src/day08.cpp
  src/day09.cpp
  src/day10.cpp
  src/day11.cpp
  src/day12.cpp
  src/day13.cpp
  src/day14.cpp
  src/day15.cpp
  src/day16.cpp
  src/day17.cpp
  src/day18.cpp
  src/day19.cpp
  src/day20.cpp
  )
