cabal-version: 2.4
name:          advent-of-code
version:       0.0.0.0
synopsis:      See README for more info
description:   See README for more info
homepage:      https://github.com/stefanboere/advent-of-code
bug-reports:   https://github.com/stefanboere/advent-of-code/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Stefan Boere
maintainer:    Stefan Boere <s.boere@hotmail.com>
copyright:     2021 Stefan Boere
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/stefanboere/advent-of-code.git

common common-options
  build-depends:    base ^>=4.14.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: AdventOfCode
  build-depends:
    , bytestring
    , containers
    , data-default
    , filepath
    , mtl
    , text
    , time

test-suite advent-of-code-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules: AdventOfCodeSpec
  build-depends:
    , advent-of-code
    , data-default
    , generic-random
    , hspec                 ^>=2.7.0
    , QuickCheck
    , quickcheck-instances
    , text

  build-tool-depends: hspec-discover:hspec-discover ^>=2.7.0
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wno-missing-signatures
    -Wno-missing-export-lists
